😉优化使用体验，添加插件

--- a/src/assets/styles/pansou.css
+++ b/src/assets/styles/pansou.css
@@ -81,7 +81,7 @@
 
 .bg-mine-background {
   position: relative;
-  background-image: url("https://bing.liushen.fun/daily.webp");
+  background-image: url("https://bing.liushen.fun/api/random");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
